<resources>
    <string name="app_name">RecipeBook</string>
    <string name="content_description">content_description</string>
    <string name="error_massage">Something went wrong.\nPlease try again later.</string>
    <string name="save">Save</string>
    <string name="recipe_name">Recipe name</string>
    <string name="recipe_headline">Recipe headline</string>
    <string name="recipe_description">Recipe description</string>
    <string name="calories">Calories</string>
    <string name="proteinsHint">Proteins</string>
    <string name="fatsHint">Fats</string>
    <string name="carbsHint">Carbs</string>
    <string name="timeHint">Time</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="proteins">%s \nProteins</string>
    <string name="fats">%s \nFats</string>
    <string name="carbs">%s \nCarbs</string>
    <string name="time">%d min</string>
    <string name="no_data"> — </string>
    <string name="try_again">Try again</string>
</resources>