<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.recipelist.RecipeListFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar_linearLayout" />

    <ImageView
        android:id="@+id/error_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_error"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/error_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar_linearLayout"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/error_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/error_massage"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_imageView" />

    <ImageView
        android:id="@+id/success_imageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_success"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar_linearLayout" />

    <LinearLayout
        android:id="@+id/topAppBar_linearLayout"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_imageView"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:contentDescription="@string/content_description"
            app:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/recipeImage_imageView"
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar_linearLayout" />

    <ScrollView
        android:id="@+id/recipeDetails_scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeImage_imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recipeDetails_constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <EditText
                android:id="@+id/recipeName_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/recipe_name"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/recipeHeadline_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/recipe_headline"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipeName_editText" />

            <EditText
                android:id="@+id/recipeDescription_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/recipe_description"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipeHeadline_editText" />

            <EditText
                android:id="@+id/recipeCalories_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/calories"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/recipeProteins_editText"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipeDescription_editText" />

            <EditText
                android:id="@+id/recipeProteins_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/proteins"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/recipeCalories_editText"
                app:layout_constraintTop_toBottomOf="@id/recipeDescription_editText" />

            <EditText
                android:id="@+id/recipeFats_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/fats"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/recipeCarbs_editText"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipeCalories_editText" />

            <EditText
                android:id="@+id/recipeCarbs_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/carbs"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/recipeFats_editText"
                app:layout_constraintTop_toBottomOf="@id/recipeProteins_editText" />

            <EditText
                android:id="@+id/recipeTime_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/time"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/recipeDifficulty_editText"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipeFats_editText" />

            <EditText
                android:id="@+id/recipeDifficulty_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/difficulty"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/recipeTime_editText"
                app:layout_constraintTop_toBottomOf="@id/recipeCarbs_editText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@id/bottomAppBar_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/bottomAppBar_linearLayout"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_home" />

        <ImageView
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_add" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_favourite_dark" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>